# wasi-guard

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yaml
examples/: scanner.rs  usage.rs
macros/: Cargo.toml
macros/src/: lib.rs  statement.rs
macros/tests/: test.rs
src/: abi.rs  lib.rs  main.rs  util.rs  wasi.rs
src/policy/: action.rs  bound.rs  mod.rs  stmt.rs
tests/: policies.rs  statements.rs  std_lazy_gaurd.rs  time.wasm
tests/defaults/: allow.rs  kill.rs  log.rs  mod.rs  ret_errno.rs
tests/stmts/: kill.rs  mod.rs  simple.rs  without_bounds.rs
wasi/: Cargo.toml
wasi/src/: lib.rs  p1.rs
wasi_descriptor/: Cargo.toml
wasi_descriptor/src/: lib.rs
wasi_descriptor/tests/: test.rs
