[package]
name = "wasi-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmparser = "0.224.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.95"
wasi-guard-macros = { path = "macros" }
smallvec = "1.14.0"
wasi_descriptor = { workspace = true }
wasi = { workspace = true }

[dev-dependencies]
wat = "1.225.0"
rand = "0.9.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[workspace]
members = ["macros", "wasi", "wasi_descriptor"]
resolver = "2"

[workspace.dependencies]
wasi_descriptor = { path = "wasi_descriptor" }
wasi = { path = "wasi" }
