[package]
name = "wasi-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmparser = { version = "0.224.0", default-features = false } 
wasi-guard-macros = { path = "macros" }
smallvec = "1.13"
wasi_descriptor = { workspace = true }
wasi = { workspace = true }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
wat = "1.225.0"
rand = "0.9.0"
wasip1 = { package = "wasi", version = "0.11", default-features = false }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[workspace]
members = ["macros", "wasi", "wasi_descriptor"]
resolver = "2"

[workspace.dependencies]
wasi_descriptor = { path = "wasi_descriptor" }
wasi = { path = "wasi" }
